--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style.css"> 
     
 </head>
-<body>
+<body class="index">
     <header>
         <div class="movMenu">
         <img src="./images/icono.png" alt="" width="100" height="50">
