--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body class="index">
     <header>
         <div class="movMenu">
-        <img src="./images/icono.png" alt="" width="100" height="50">
-        <nav>
-            <ul class="menu">
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./page/fotos.html">Fotos</a></li>
-                <li><a href="./page/contacto.html">Contacto</a></li>
-                <li><a href="./page/nosotros.html"> Nosotros</a></li>
-                <li><a href="./page/agenda.html"> Agenda</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul class="menu">
+                    <li><img src="./images/icono.png" alt="Logo W4"width="100" height="50"></li>
+                    <li><a id="list" href="./index.html">Inicio</a></li>
+                    <li><a id="list" href="./page/fotos.html">Fotos</a></li>
+                    <li><a id="list" href="./page/contacto.html">Contacto</a></li>
+                    <li><a id="list" href="./page/nosotros.html"> Nosotros</a></li>
+                    <li><a id="list" href="./page/agenda.html"> Agenda</a></li>
+                </ul>
+            </nav>
         </div>
         
     </header>
