--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 
 <footer>
-    <a  href="https://www.instagram.com/w4djs/">Instagram</A> 
-    <a  href="https://www.facebook.com/w4musica">facebook</a>
+    <a id="list"  href="https://www.instagram.com/w4djs/">Instagram</A> 
+    <a id="list" href="https://www.facebook.com/w4musica">facebook</a>
 </footer>
 
 
