--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="movMenu">
             <nav>
                 <ul class="menu">
-                    <li><img src="./images/icono.png" alt="Logo W4"width="100" height="50"></li>
-                    <li><a id="list" href="./index.html">Inicio</a></li>
+                    <li><a id="list" href="./index.html"><img src="./images/icono.png" alt="Logo W4"width="100" height="50"></a></li>
+                   
                     <li><a id="list" href="./page/fotos.html">Fotos</a></li>
                     <li><a id="list" href="./page/contacto.html">Contacto</a></li>
                     <li><a id="list" href="./page/nosotros.html"> Nosotros</a></li>
@@ -42,5 +42,4 @@
 </body>
 </html>
 <!--FIGMA-->
-<!--https://www.figma.com/file/6aRy4Ruuniv7NXE8WerLQ3/Untitled?node-id=2%3A2-->
-<!--https://www.figma.com/file/6aRy4Ruuniv7NXE8WerLQ3/Untitled?node-id=25%3A6-->
+<!--https://www.figma.com/file/6aRy4Ruuniv7NXE8WerLQ3/Untitled?node-id=28%3A93-->
