--- a/index.html
+++ b/index.html
@@ -23,30 +23,33 @@
             <div class="containerRedes">
                 <ul class="menu">
                     <li>
-                       <a href="https://www.facebook.com/w4musica"> <i class="fa-brands fa-facebook"></i></a>
+                       <a id="list" href="https://www.facebook.com/w4musica"> <i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li>
-                        <i class="fa-brands fa-instagram"></i>
+                       <a id="list" href=""><i class="fa-brands fa-instagram"></i></a> 
                     </li>
-                    <li><i class="fa-brands fa-twitter"></i>
+                    <li>
+                        <a id="list" href=""><i class="fa-brands fa-twitter"></i></a> 
                     </li>
                 </ul>
             </div>
         </div>  
         <nav>
-            <div>
-                <div>
+            <div class="containerInferior">
+                <div class="containerLogo">
                     <h1>
                         <img src="./images/icono.png" alt="" width="100" height="50" />
                     </h1>
                 </div>
-                <ul class="menu">
+                <div class="containerMenu">
+                    <ul class="menu">
                     <li><a id="list" href="../index.html">Inicio</a></li>
-                    <li><a id="list" href="./page/fotos.html">Fotos</a></li>
-                    <li><a id="list" href="./page/contacto.html">Contacto</a></li>
-                    <li><a id="list" href="./page/nosotros.html"> Nosotros</a></li>
-                    <li><a id="list" href="./page/agenda.html"> Agenda</a></li>
-                </ul>
+                        <li><a id="list" href="./page/fotos.html">Fotos</a></li>
+                        <li><a id="list" href="./page/contacto.html">Contacto</a></li>
+                        <li><a id="list" href="./page/nosotros.html"> Nosotros</a></li>
+                        <li><a id="list" href="./page/agenda.html"> Agenda</a></li>
+                    </ul>
+                </div>    
             </div>
         </nav>
     </header>
