--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                 </ul>
             </div>
             <div class="containerRedes">
-                <ul class="menu">
+                <ul class="menuIcons">
                     <li>
                        <a id="list" href="https://www.facebook.com/w4musica"> <i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li>
-                       <a id="list" href=""><i class="fa-brands fa-instagram"></i></a> 
+                       <a id="list" href="https://www.instagram.com/w4djs/"><i class="fa-brands fa-instagram"></i></a> 
                     </li>
                     <li>
-                        <a id="list" href=""><i class="fa-brands fa-twitter"></i></a> 
+                        <a id="list" href="https://twitter.com/W4Music"><i class="fa-brands fa-twitter"></i></a> 
                     </li>
                 </ul>
             </div>
@@ -49,6 +49,7 @@
                         <li><a id="list" href="./page/nosotros.html"> Nosotros</a></li>
                         <li><a id="list" href="./page/agenda.html"> Agenda</a></li>
                     </ul>
+                    <i id="menuBurger" class="fa-solid fa-bars"></i>
                 </div>    
             </div>
         </nav>
@@ -58,9 +59,17 @@
         <h2 class="h2Index">Vivi tu experiencia W4</h2>
     </main>
 
-    <footer>
-        <a id="list" href="https://www.instagram.com/w4djs/">Instagram</a>
-        <a id="list" href="https://www.facebook.com/w4musica">facebook</a>
+    <footer >
+        <div class="footerRedes">
+            <a id="list" href="https://www.instagram.com/w4djs/">Instagram</a>
+            <a id="list" href="https://www.facebook.com/w4musica">facebook</a>
+        </div>
+        <div class="footerEmail">
+            <ul class="ulRedes">
+                <li class="w4" ><p>w4djs@gmail.com</p></li>
+                <li class="w4"><p> 3442482601</p></li>
+            </ul>
+        </div>
     </footer>
 </body>
 
