--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <div class="containerLogo">
                     <h1>
                         <img src="./images/icono.png" alt="" width="100" height="50" />
+                        <p>W4Music</p>
                     </h1>
                 </div>
                 <div class="containerMenu">
