--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <title>W4</title>
     <link rel="shortcut icon" href="./images/icono.png" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="https://kit.fontawesome.com/b5f0845886.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="index">
-    <header>
+    <header >
         <div class="containerSuperior">
-            <div class="containerEmail">
-                <ul class="ulRedes">
-                    <li class="w4" ><p>w4djs@gmail.com</p></li>
-                    <li class="w4"><p> 3442482601</p></li>
-                </ul>
-            </div>
+                <div class="containerEmail">
+                    <ul class="ulRedes">
+                        <li class="w4" ><p class="animate__animated animate__backInLeft ">w4djs@gmail.com</p></li>
+                        <li class="w4"><p class="animate__animated animate__backInLeft "> 3442482601</p></li>
+                    </ul>
+                </div>
             <div class="containerRedes">
                 <ul class="menuIcons">
                     <li>
