--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
 
     <main>
         <h2 class="h2Index">Vivi tu experiencia W4</h2>
+        <div>
+            <video autoplay loop> 
+                <source src="./images/institucional2.mp4">
+            </video>
+        </div>
     </main>
 
     <footer >
