--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>W4</title>
     <link rel="shortcut icon" href="./images/icono.png" />
-    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/b5f0845886.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body class="index">
@@ -49,7 +50,7 @@
                         <li><a id="list" href="./page/fotos.html">Fotos</a></li>
                         <li><a id="list" href="./page/contacto.html">Contacto</a></li>
                         <li><a id="list" href="./page/nosotros.html"> Nosotros</a></li>
-                        <li><a id="list" href="./page/agenda.html"> Agenda</a></li>
+                        <li><a id="list" href="./page/agenda.html"> Presupuestos</a></li>
                     </ul>
                     <i id="menuBurger" class="fa-solid fa-bars"></i>
                 </div>    
@@ -58,12 +59,11 @@
     </header>
 
     <main>
-        <h2 class="h2Index">Vivi tu experiencia W4</h2>
-        <div>
+        <div class="col-xs-12 col-xl-12">
             <video autoplay loop> 
-                <source src="./images/institucional2.mp4">
+                <source src="./images/institucional2.mp4" >
             </video>
-        </div>
+        </div>    
     </main>
 
     <footer >
@@ -78,6 +78,7 @@
             </ul>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
 </html>
