--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="containerMenu">
                     <ul class="menu">
-                    <li><a id="list" href="../index.html">Inicio</a></li>
+                    <li><a id="list" href="./index.html">Inicio</a></li>
                         <li><a id="list" href="./page/fotos.html">Fotos</a></li>
                         <li><a id="list" href="./page/contacto.html">Contacto</a></li>
                         <li><a id="list" href="./page/nosotros.html"> Nosotros</a></li>
