--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Es el sitio web de la Empresa profesional para eventos W4 Music, siendo la más joven y novedosa en la ciudad de Concepción del Uruguay, hace que sea un nuevo concepto para la realización de Eventos. Esta nueva plataforma web cuenta con una página inicial muy completa y dinámica donde con un solo click podrás conocer los Servicios que ofrece W4 Music >
-    <meta name="keywords" content="MUSIC, W4, MUSICA, ILUMINACION, FIESTA, EVENTO, ENTRE RIOS, CDELU,">
+    <meta name="description" content="Es el sitio web de la Empresa profesional para eventos W4 Music, siendo la más joven y novedosa en la ciudad de Concepción del Uruguay, hace que sea un nuevo concepto para la realización de Eventos. Esta nueva plataforma web cuenta con una página inicial muy completa y dinámica donde con un solo click podrás conocer los Servicios que ofrece W4 Music" >
+    <meta name="keywords" content="MUSIC, W4, MUSICA, ILUMINACION, FIESTA, EVENTO, ENTRE RIOS, CDELU, FOTOS">
     <title>W4</title>
     <link rel="shortcut icon" href="./images/icono.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
