--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                         <li><a id="list" href="./page/nosotros.html"> Nosotros</a></li>
                         <li><a id="list" href="./page/agenda.html"> Presupuestos</a></li>
                     </ul>
-                    <nav class="navbar navbar-dark bg-dark">
+                    <nav class="navbar navbar-dark">
                         <div class="container-fluid">
                           
-                          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                          <button class="mdn navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                             <span class="navbar-toggler-icon"></span>
                           </button> 
                           <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
